--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,6 +18,11 @@ common-js:
 <html lang="en">
   <!-- Beautiful Jekyll | MIT license | Copyright Dean Attali 2016 -->
   {% include head.html %}
+  
+  <head>
+	<link rel="shortcut icon" href="img/logo.ico">
+  </head>
+
 
   <body>
 
