--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,7 +20,7 @@ common-js:
   {% include head.html %}
   
   <head>
-	<link rel="shortcut icon" href="img/logo.ico">
+	<link rel="shortcut icon" href="logo.ico">
   </head>
 
 
