--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -10,6 +10,9 @@ common-js:
 <!DOCTYPE html>
 <html lang="en">
 
+  <head>
+	<link rel="shortcut icon" href="logo.ico">
+  </head>
   {% include head.html %}
 
   <body>
